6f3a319ab95410ba68705df3fe7ac15924df5b53 fix: Fix issue with autofill modal being wider than screen on mobile
Jira Issue DD-2172

Sync to source repo @6f3a319ab95410ba68705df3fe7ac15924df5b53

--- a/css/autoFill.semanticui.css
+++ b/css/autoFill.semanticui.css
@@ -89,4 +89,9 @@ div.dt-autofill-background {
     height: 16px;
     width: 16px;
   }
+
+  div.dt-autofill-list {
+    width: 90%;
+    left: 74.5%;
+  }
 }
